--- a/Smart-Vehicle-App/client/src/app/modules/administration/advisor/create-advisor/create-advisor.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/advisor/create-advisor/create-advisor.component.html
@@ -52,7 +52,7 @@
             <div class="row">
                 <div class="d-grid gap-2">
                     <button class="btn btn-primary" (click)="RegisterAdvisor()" [disabled]="!form.valid"
-                        type="button">Crear Cuenta <i class="material-icons right">send</i></button>
+                        type="button">Crear Asesor<i class="material-icons right">send</i></button>
                 </div>
             </div>
         </form>
