Se ajusta el mensaje de envío exitoso del mail del formulario en el home

--- a/Smart-Vehicle-App/client/src/app/template/home/mail-sent.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/home/mail-sent.component.html
@@ -3,5 +3,5 @@
     <p>Su mensaje fue enviado con éxito.</p>
 </mat-dialog-content>
 <mat-dialog-actions align="center">
-    <button mat-raised-gitbutton color="primary" [mat-dialog-close]="true" (click)="RefrescarFormulario()" cdkFocusInitial>Aceptar</button>
+    <button mat-raised-button color="primary" [mat-dialog-close]="true" (click)="RefrescarFormulario()" cdkFocusInitial>Aceptar</button>
 </mat-dialog-actions>
