Se agrega dialogo de confirmacion de cliente creado y se arregla problema con la sesion ya que desaparecian los links del navbar al recargar la pagina

--- a/Smart-Vehicle-App/client/src/app/modules/administration/client/create-client/create-client.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/client/create-client/create-client.component.html
@@ -82,7 +82,7 @@
 
             <div class="row">
                 <div class="d-grid gap-2">
-                    <button [disabled]="!form.valid" routerLink="/administration/vehicle/list-vehicle" class="btn btn-primary" (click)="Register()"
+                    <button [disabled]="!form.valid" class="btn btn-primary" (click)="Register()"
                         type="button">Crear Cuenta <i class="material-icons right">send</i></button>
                 </div>
             </div>
