Fue necesario modificar el modelo de la solicitud y agregarle el nombre del solicitante y el id del asesor para asi hacer la tabla en el frontend menos compleja

--- a/Smart-Vehicle-App/client/src/app/modules/administration/advisor/list-advisor/list-advisor.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/advisor/list-advisor/list-advisor.component.html
@@ -29,7 +29,7 @@
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row [matMenuTriggerFor]="menu" #menuTrigger (click)="clickedRows.add(row)"
-            *matRowDef="let row; columns: displayedColumns;"></tr>
+          (menuClosed)="clickedRows.clear()" *matRowDef="let row; columns: displayedColumns;"></tr>
 
           <mat-menu #menu="matMenu" class="myMenu">
             <div *ngFor="let clickedRow of clickedRows">
