Se modifica el backend para implementar las estrategias de autenticacion correctamente segun el rol de la persona que esta logeada en el frontend, asi mismo en el frontend se implementa el servicio de asesor y se independiza del de personas para en un futuro implementar servicios por separado segun el rol

--- a/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/create-vehicle/create-vehicle.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/administration/vehicle/create-vehicle/create-vehicle.component.html
@@ -6,7 +6,7 @@
                 <div class="col-md-6">
                     <label for="Tipo_vehiculo" class="form-label">Tipo vehículo</label>
                     <select class="form-select" formControlName="tipo_vehiculo" id="Tipo_vehiculo">
-                        <option value="Carros">Carro</option>
+                        <option value="Carro">Carro</option>
                         <option value="Motocicleta">Motocicleta</option>
                         <option value="Scootter">Scootter</option>
                     </select>
