--- a/Smart-Vehicle-App/client/src/app/template/home/home.component.html
+++ b/Smart-Vehicle-App/client/src/app/template/home/home.component.html
@@ -253,7 +253,7 @@
             </div>
         </div>
         <div class="btn-stock-vehicles">
-            <button class="btn btn-primary btn-vehicles" type="submit">ver stock</button>
+            <button class="btn btn-primary btn-vehicles" routerLink="/administration/vehicle/list-vehicle" type="submit">ver stock</button>
         </div>
     </div>
 </section>
