--- a/Smart-Vehicle-App/client/src/app/modules/request/advisor-list-request/advisor-list-request.component.html
+++ b/Smart-Vehicle-App/client/src/app/modules/request/advisor-list-request/advisor-list-request.component.html
@@ -12,40 +12,41 @@
                 <!-- Position Column -->
                 <ng-container matColumnDef="solicitante">
                     <th mat-header-cell *matHeaderCellDef>Solicitante</th>
-                    <td mat-cell *matCellDef="let element">{{element.solicitante}}</td>
+                    <td mat-cell *matCellDef="let element"><span class="mobile-label">Solicitante:</span>{{element.solicitante}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="marca">
                     <th mat-header-cell *matHeaderCellDef>Marca</th>
-                    <td mat-cell *matCellDef="let element">{{element.marca}}</td>
+                    <td mat-cell *matCellDef="let element"><span class="mobile-label">Marca:</span>{{element.marca}}</td>
                 </ng-container>
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="modelo">
                     <th mat-header-cell *matHeaderCellDef>Modelo</th>
-                    <td mat-cell *matCellDef="let element">{{element.modelo}}</td>
+                    <td mat-cell *matCellDef="let element"><span class="mobile-label">Modelo:</span>{{element.modelo}}</td>
                 </ng-container>
 
                 <!-- Weight Column -->
                 <ng-container matColumnDef="valor">
                     <th mat-header-cell *matHeaderCellDef>Valor</th>
-                    <td mat-cell *matCellDef="let element">{{element.valor}}</td>
+                    <td mat-cell *matCellDef="let element"><span class="mobile-label">Valor:</span>{{element.valor}}</td>
                 </ng-container>
 
                 <!-- Symbol Column -->
                 <ng-container matColumnDef="tipo_solicitud">
                     <th mat-header-cell *matHeaderCellDef>Tipo de Solicitud</th>
-                    <td mat-cell *matCellDef="let element">{{element.tipo_solicitud}}</td>
+                    <td mat-cell *matCellDef="let element"><span class="mobile-label">Tipo:</span>{{element.tipo_solicitud}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="estado">
                     <th mat-header-cell *matHeaderCellDef>Estado</th>
-                    <td mat-cell *matCellDef="let element">{{element.estado}}</td>
+                    <td mat-cell *matCellDef="let element"><span class="mobile-label">Estado:</span>{{element.estado}}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="acciones">
                     <th mat-header-cell *matHeaderCellDef>Cambiar Estado</th>
                     <td mat-cell *matCellDef="let element">
+                        <span class="mobile-label">Cambiar Estado:</span>
                         <a type="button" mat-icon-button style="color:'green'" (click)="CambiarEstado('Aprobado', element)" ngbTooltip="Aceptar" placement="left">
                             <span class="material-icons">task_alt</span></a>
                         <a type="button" mat-icon-button color="warn" (click)="CambiarEstado('Rechazado', element)" ngbTooltip="Rechazar" placement="left">
